introduction first draft - pretty average

--- a/2018_nips_vigil/introduction.tex
+++ b/2018_nips_vigil/introduction.tex
@@ -1,1 +1,10 @@
 \section{Introduction}
+Reasoning over visual inputs is a fundamental characteristic of human intelligence.
+Reproducing this ability with artificial agents is a challenge that requires learning relations and compositionality (Hu et al. 2017; Johnson et al. 2017b).
+Visual Question Answering datasets have been tailored to benchmark those reasoning performances. The recent CLEVR dataset (Johnson et al., 2017a) proposes a challenging multimodal task that requires to answer compositional questions about an image. Solving this problem involves a broad array of skills such as counting, comparison and understanding transitive reasoning (Hudson et al. 2018) . CLEVR is a generated synthetic dataset that allows to introduce variations on a subset of data to test a particular ability such as generalization or transfer learning.
+Recent work on CLEVR from Hudson et al. 2018;  has introduced  MAC ( Memory, Attention, and Composition). The MAC model has been deliberately designed to decompose the problem into a sequence of attention-based reasoning operations. Its ability to arbitrarily draw a complex reasoning graph while still featuring end-to-end differentiability made its sucess. 
+MAC achieves state-of-the-art accuracy on CLEVR and also on the most difficult CLEVR Humans dataset, were questions are written by humans. Although the performance of MAC has been proven, does the model learn relations between objects? How does the model represent those relations and reasoning steps? 
+Is the model representing notions and concepts like objects attributes? 
+In this work, we first question the complexity of the MAC model and explore simplification possibilities. We propose a new set of equations that aims to simplify the model and improve training performance. 
+We also put to proof the MAC model on the CLEVR CoGenT dataset. The CoGenT dataset has been designed to highlight transfer learning abilities and give a better sense of interpretability. By mixing attributes other two sub-datasets, the CLEVR CoGenT allow us to see what relations and concepts the model has really learned. We show how MAC performs on CLEVR CoGenT
+and propose a study about the model failures. This work points out some of the MAC model weaknesses, in particular its failure to differentiate concepts of colors and shape. We finally discuss some improvement possibilities.
