--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -12,8 +12,34 @@
 % to avoid loading the natbib package, add option nonatbib:
 % \usepackage[nonatbib]{nips_2018}
 
-\usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
+
+%\usepackage[sc,osf]{mathpazo}   % With old-style figures and real smallcaps.
+%\linespread{1.025}              % Palatino leads a little more leading
+
+%% Euler for math and numbers
+%\usepackage[euler-digits,small]{eulervm}
+
+\usepackage{booktabs}       % professional-quality tables
+%% Useful packages
+\usepackage{amsmath, amssymb, amsfonts, bm}
+\usepackage{amsthm}
+\usepackage{mathtools}
+\usepackage{nicefrac}       % compact symbols for 1/2, etc.
+\usepackage{microtype}      % microtypography
+\usepackage{subcaption}
+\usepackage[usenames, dvipsnames]{color}
+\usepackage{floatrow}
+\usepackage{graphicx}
+\usepackage{algorithm}
+\usepackage{algorithmicx}
+\usepackage[noend]{algpseudocode}
+\usepackage{multirow,bigdelim}
+\usepackage{textcomp}
+\usepackage[title]{appendix}
+\usepackage[percent]{overpic}
+\usepackage{floatrow}
+
 \usepackage{cite}
 \usepackage[hyphens]{url}
 \urlstyle{same}
@@ -28,11 +54,17 @@
 	hyperfootnotes=true,
 	breaklinks
 }
+\usepackage[nameinlink]{cleveref}
 
-\usepackage{booktabs}       % professional-quality tables
-\usepackage{amsfonts}       % blackboard math symbols
-\usepackage{nicefrac}       % compact symbols for 1/2, etc.
-\usepackage{microtype}      % microtypography
+% Tmp - just for Jayram ;)
+\newtheorem{theorem}{Theorem}
+\theoremstyle{remark}
+\newtheorem*{notation}{Notation}
+\newtheorem*{remark}{Remark}
+\newtheorem*{note}{Note}
+
+\newcommand{\tk}{\hat{k}}
+
 
 \title{On the performance of the MAC model}
 
@@ -92,6 +124,6 @@
 \input{conclusion}
 
 \bibliographystyle{alpha}
-\bibliography{../prometheus}
+\bibliography{prometheus}
 
 \end{document}
