--- a/2018_nips_vigil/mac.tex
+++ b/2018_nips_vigil/mac.tex
@@ -25,3 +25,10 @@ The question preprocessing leads to two different outputs:
 
 
 
+\textbf{\textit{Description of the output unit:}}
+
+The output unit simply process the concatenation of the question representation  \textbf{\textit{q}} and the final memory  \textbf{\textit{mp}} to produce a final answer. For CLEVR it is a 2-layer fully-connected softmax classifier.
+
+
+
+
