--- a/2018_nips_vigil/mac.tex
+++ b/2018_nips_vigil/mac.tex
@@ -1,12 +1,20 @@
-\section{Description of MAC model}
+\section{MAC network and our proposed simplification}
 
-
-A MAC network is an end-to-end differentiable architecture primed to perform an explicit multi-step reasoning process, by stringing together p recurrent MAC cells, each responsible for performing one reasoning step. Given a knowledge base K (for VQA, an image) and a task description q (for VQA, a question), the model infers a decomposition into a series of p reasoning operations that interact with the knowledge base, iteratively aggregating and manipulating information to perform the task at hand. It consists of three components: (1) an input unit, (2) the core recurrent network, composed out of p MAC cells, and (3) an output unit, all described below.
+The MAC network~\cite{hudsonManning18} is a recurrent model that performs reasoning 
+using multiple steps, where each step involves sequentially analyzing a part of the question following which attention on the image is changed suitably.
+At the end, a suitable answer is given based on this composite reasoning.
+To improve the accuracy of prediction, both the questions and images
+are preprocessed suitably. For the question,  a word-embedding is first used to
+transformed the question into a sequence of vectors which is then passed through
+a bidirectional LSTM to produce a sequence of hidden state pairs. Each such pair 
+corresponds to a unique word in the question and is called the 
+\emph{contextual embedding} for that word.
+Similarly each image is initially processed using a pre-trained network (using ResNet) followed by two trainable CNN layers. 
 
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=0.7\textwidth]{img/mac_cell.pdf}
-	\caption{The Mac Cell. The MAC recurrent cell consists of a control unit, read unit, and write unit, that operate over dual control and memory hidden states. The control unit successively attends to different parts of the task description (question), updating the control state to represent at each timestep the reasoning operation the cell intends to perform. The read unit extracts information out of a knowledge base (here, image), guided by the control state. The write unit integrates the retrieved information into the memory state, yielding the new intermediate result that follows from applying the current reasoning operation.}
-	\label{fig:core_concepts}
+	\caption{The Mac Cell. The MAC recurrent cell consists of a control unit, read unit, and write unit, that operate over dual control and memory hidden states. }
+	\label{fig:mac_cell}
 \end{figure}
 
