--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -40,7 +40,7 @@
 \usepackage[percent]{overpic}
 \usepackage{floatrow}
 
-\usepackage{cite}
+%\usepackage{cite}
 \usepackage[hyphens]{url}
 \urlstyle{same}
 \usepackage{hyperref}
