--- a/2018_nips_vigil/introduction.tex
+++ b/2018_nips_vigil/introduction.tex
@@ -2,7 +2,7 @@
 Reasoning over visual inputs is a fundamental characteristic of human intelligence.
 Reproducing this ability with artificial agents is a challenge that requires learning relations and compositionality (Hu et al. 2017; Johnson et al. 2017b).
 
-The Visual Question Answering (VQA) task has been tailored to benchmark those reasoning performances. It is a complex semantic task requiring both natural language processing and visual recognition. It also put to the test the effective use of the short term memory.
+The Visual Question Answering (VQA) task has been tailored to benchmark those reasoning performances. It is a complex semantic task requiring both natural language processing and visual recognition. It also puts to the test the effective use of the short term memory.
 
 The recent CLEVR dataset (Johnson et al., 2017a) proposes a challenging multimodal task that requires to answer compositional questions about an image. The dataset is designed with the explicit goal of enabling detailed analysis of visual reasoning.
 Solving this problem involves a broad array of skills such as counting, comparison and understanding transitive reasoning.
