S-mac with both equations side-by-side

--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -39,6 +39,7 @@
 \usepackage[title]{appendix}
 \usepackage[percent]{overpic}
 \usepackage{floatrow}
+\usepackage{multicol}
 
 %\usepackage{cite}
 \usepackage[hyphens]{url}
@@ -63,7 +64,6 @@
 \newtheorem*{remark}{Remark}
 \newtheorem*{note}{Note}
 
-\newcommand{\tk}{\hat{k}}
 
 
 \title{On the performance of the MAC model}
