--- a/2018_nips_vigil/mac.tex
+++ b/2018_nips_vigil/mac.tex
@@ -10,8 +10,8 @@ a bidirectional LSTM to produce a sequence of hidden state pairs. Each such pair
 corresponds to a unique word in the question and is called the 
 \emph{contextual embedding} for that word.
 Similarly each image is initially processed using a pre-trained network (using ResNet) followed by two trainable CNN layers.\\
-The core of network is a sequence of recurrent MAC cells. A MAC cell (Figure 1) is performing one reasoning step. At every step the network is driving the attention on one part of the question and a corresponding part of the image. This operation is made possible by the combination of 3 units working together, a control unit, a read and a write units. The control unit is updating the control state and drives the attention over the question. Given this control state, the read unit then retrieves information from the memory and drives the attention over the image.
-Finally, the write unit retrieves this visual information and update the memory state.
+The core of the network is a sequence of recurrent MAC cells. A MAC cell (Figure 1) is performing one reasoning step. At every step the network is driving the attention on one part of the question and the corresponding part of the image. This operation is made possible by the combination of 3 units working together, a control unit, a read and a write units. The control unit is updating the control state and drives the attention over the question. Given this control state, the read unit then retrieves information from the memory and drives the attention over the image.
+Finally, the write unit retrieves this visual information and updates the memory state.
 The last part of the network is the output unit. The output unit is simply a classifier that process the concatenation of the question representation and the final memory to produce a final answer.\\
 By going through this recurrent process, the network performs a reasoning strategy that learns concepts and relations between them. 
 MAC is performing state of the art accuracy on CLEVR....
