--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -1,3 +1,3 @@
 \section{Experiments}
 
-We propose to further analyse MAC’s generalization and transfer learning abilities by testing it on the CLEVR-CoGenT dataset. It is synthesized in the same way as CLEVR but contains two conditions: in Condition A, all cubes are gray, blue, brown, or yellow and all cylinders are red, green, purple, or cyan; in Condition B, cubes and cylinders swap color palettes. Both conditions contain spheres of all colors. The CoGenT task has been designed to give a better sense of interpretability than CLEVR Humans. By making clever combinations of attributes it allow us to see  if the model can differentiate concepts of colors and shape.
+We propose to further analyse MAC’s generalization and transfer learning abilities by testing it on the CLEVR-CoGenT dataset. It is synthesized in the same way as CLEVR but contains two conditions: in Condition A, all cubes are gray, blue, brown, or yellow and all cylinders are red, green, purple, or cyan; in Condition B, cubes and cylinders swap color palettes. Both conditions contain spheres of all colors. The CoGenT task has been designed to give a better sense of interpretability than CLEVR Humans. By making clever conditions on the combinations of attributes it allows us to see  if the model can differentiate concepts of colors and shape.
