Started the experiments section.

--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -31,6 +31,20 @@
 \setlength{\columnseprule}{0.5pt}
 \def\columnseprulecolor{\color{Plum}}
 
+% Simple macros.
+\def\sec#1{Sec.~\ref{#1}}
+\def\Sec#1{Sec.~\ref{#1}}
+\def\fig#1{Fig.~\ref{#1}}
+\def\Fig#1{Fig.~\ref{#1}}
+\def\tableref#1{Table~\ref{#1}}
+
+\newcommand{\tk}[1]{\textcolor{red}{TK: #1}}
+\newcommand{\tkf}[1]{\footnote{\tk{#1}}}
+\newcommand{\ao}[1]{\textcolor{green}{AO: #1}}
+\newcommand{\tsj}[1]{\textcolor{magenta}{TSJ: #1}}
+\newcommand{\vm}[1]{\textcolor{blue}{Vincent M: #1}}
+\newcommand{\vmf}[1]{\footnote{\vm{#1}}}
+
 %\usepackage{cite}
 \usepackage[hyphens]{url}
 \urlstyle{same}
