--- a/2018_nips_vigil/prometheus.bib
+++ b/2018_nips_vigil/prometheus.bib
@@ -1,5 +1,29 @@
 % Encoding: UTF-8
 
+@inproceedings{johnson2017inferring,
+	title={Inferring and Executing Programs for Visual Reasoning.},
+	author={Johnson, Justin and Hariharan, Bharath and van der Maaten, Laurens and Hoffman, Judy and Fei-Fei, Li and Zitnick, C Lawrence and Girshick, Ross B},
+	booktitle={ICCV},
+	pages={3008--3017},
+	year={2017}
+}
+
+
+@inproceedings{mascharka2018transparency,
+	title={Transparency by Design: Closing the Gap Between Performance and Interpretability in Visual Reasoning},
+	author={Mascharka, David and Tran, Philip and Soklaski, Ryan and Majumdar, Arjun},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	pages={4942--4950},
+	year={2018}
+}
+
+@article{perez2017film,
+	title={Film: Visual reasoning with a general conditioning layer},
+	author={Perez, Ethan and Strub, Florian and De Vries, Harm and Dumoulin, Vincent and Courville, Aaron},
+	journal={arXiv preprint arXiv:1709.07871},
+	year={2017}
+}
+
 @InProceedings{abadi2016tensorflow,
   Title                    = {TensorFlow: A System for Large-Scale Machine Learning.},
   Author                   = {Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
