Rewritten introduction, added several bibtex positions

--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -60,6 +60,7 @@
 \newcommand{\mem}{\mathbf{m}}
 \newcommand{\rr}{\mathbf{r}}
 
+\newcommand{\tk}[1]{\textcolor{red}{TK: #1}}
 
 \title{On the performance of the MAC model}
 
