--- a/2018_nips_vigil/prometheus.bib
+++ b/2018_nips_vigil/prometheus.bib
@@ -126,6 +126,14 @@
 	publisher={Elsevier}
 }
 
+
+@article{guarnelo2016,
+	title={Towards deep symbolic reinforcementlearning},
+	author={Marta Garnelo, Kai Arulkumaran, and Murray Shanahan},
+	journal={arXiv preprint arXiv:1609.05518},
+	year={2016},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: saveOrderConfig:specified;bibtexkey;false;abstract;false;abstract;false;}
