--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -18,7 +18,7 @@ below, without incurring too much drop in accuracy.
 
 In the description below, the original MAC cell equations are shown on the \emph{left}
 while our simplified equations are shown (in color) on the {\color{Plum} \emph{right}}.
-(The equation numbering is the same as in~\cite{hudsonManning18}.)
+(The equation numbering is the same as in~\cite{hudson2018compositional}.)
 
 \noindent\textit{Notation:} The index/position $i$ below denotes the reasoning step. 
 Unless mentioned otherwise, the weights/biases are invariant w.r.t $i$, 
@@ -26,7 +26,7 @@ i.e., shared across all the reasoning steps.
 
 \noindent\textbf{Control unit:} 
 For both models, in the control unit, the question $q$ is first transformed in each step of 
-the reasoning using a \emph{position-aware}~\cite{hudsonManning18} 
+the reasoning using a \emph{position-aware}~\cite{hudson2018compositional} 
 linear layer: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 
 \begin{multicols}{2}
@@ -49,7 +49,8 @@ linear layer: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 \end{multicols}
 
 \noindent\textbf{Read and write units:}
-For both models below, $\kb_{hw}$ denotes the \emph{knowledge base}~\cite{hudsonManning18}
+For both models below, $\kb_{hw}$ denotes the 
+\emph{knowledge base}~\cite{hudson2018compositional}
 consisting of 3D tensors with dimension $H \times W \times d$ for each image
 in the data set. The difference in computing $\kb_{hw}$ is that the simplified MAC uses
 an additional linear layer on top of the 2 CNN layers present in the original MAC network.
